[package]
name = "websocket-util"
version = "0.6.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/websocket-util"
repository = "https://github.com/d-e-s-o/websocket-util.git"
readme = "README.md"
description = """
A crate providing an easy to consume streaming interface for WebSocket
data.
"""

[badges]
gitlab = { repository = "d-e-s-o/websocket-util", branch = "master" }

[features]
test = []

[dependencies]
futures = {version = "0.3", default-features = false}
tokio = {version = "1.0", default-features = false, features = ["rt", "time"]}
tracing = {version = "0.1", default-features = false, features = ["std"]}
tokio-tungstenite = {version = "0.13", default-features = false, features = ["connect"]}

[dev-dependencies]
serde = {version = "1.0", features = ["derive"]}
test-env-log = {version = "0.2", default-features = false, features = ["trace"]}
tokio = {version = "1.0", default-features = false, features = ["rt", "macros", "net"]}
tracing-subscriber = {version = "0.2", default-features = false, features = ["ansi", "chrono", "env-filter", "fmt"]}
url = "2.0"
